# iCJS

./: .project  IntList.cpp  IntList.h  IntMap.cpp  IntMap.h  IntStack.cpp  Palindrome Test  Palindrome Test2  Palindrome from a file  README.md  exam question w  main.cpp  palindromeCheck.cpp  top 1000 words english
assignment06_randomTest/CPP/ObStack/: ObStackTest.cpp
assignment06_randomTest/CPP/RandomIntListTest/: IntList.cpp  IntList.h  IntListTest.cpp
assignment06_randomTest/CPP/RandomIntStack/: IntStack.h  IntStackTest.cpp  IntStack_1.cpp
assignment06_randomTest/Java/ObStack/: ObStackTest.java  randomGenerator.java
assignment06_randomTest/Java/RandomIntList/: IntListTest.java
assignment06_randomTest/Java/RandomIntStackTest/: IntStackTest.java
cProlog/: CMakeLists.txt  Readme.md
cProlog/c_src/: Clause.cpp  Clause.h  Engine.cpp  Engine.h  Engine1.cpp  Engine1.h  IMap.cpp  IMap.h  IntList.cpp  IntList.h  IntMap.cpp  IntMap.h  IntMap1.cpp  IntStack.h  IntStack_1.cpp  Prog.cpp  Prog.h  Spine.cpp  Spine.h  Toks.cpp  Toks.h  Toks1.cpp  Toks1.h  boostTest.cpp  exceptionhelper.h  linked_map.hpp  main.cpp  main.h  stringbuilder.h  stringhelper.h
cProlog/c_src/linked_map-master/: LESSER_GPL.md  README.md
testProlog/CppTest/IntListTest/: IntList.h  IntListTest.cpp  IntStack.h
testProlog/CppTest/IntStackS/: CMakeLists.txt  IntListTest.cpp  main.cpp
testProlog/CppTest/IntStackS/Tests/: IntStack.h  IntStackTest.cpp  test.cpp
testProlog/CppTest/ObStackTest/: CMakeLists.txt  ObStack.cpp  ObStack.h  ObStackTest.cpp
testProlog/JavaTest/: IntStackTest.java  ObStackTest.java  TestIntList.java
